--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,7 +24,10 @@ body {
 .logo {
     float: right;
 }
-
+.float_pic {
+    float:left;
+    margin:10px;
+}
 .navbar {
     /* background: url('../img/logo_small.png') left top no-repeat black;*/
 }
